# aimsprop

./: .gitignore  .mdl.rb  404.html  CONTRIBUTING.md  LICENSE  README  README.md  dev_tools.txt  index.html  install_env_devs.sh  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: basic_code_checks.yaml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
aimsprop/: README  TODO  __init__.py  aimspy.py  atom_data.py  blur.py  bootstrap.py  bundle.py  fms90.py  geom.py  manage_xyz.py  need_for_speed3.pyx  pes.py  plot.py  pop.py  pyms.py  rotate.py  sine.py  traj.py  ued.py  units.py  wrap.py  xyz.py
aimsprop/iam/: __init__.py  diffraction.py  formfactor.py  legendre.py  rotation.py
aimsprop/iam/ext/: Makefile  test.cpp
aimsprop/vis_aims/: __init__.py  render.py  run.py
aimsprop/vis_aims/ref/: footer.vmd  header.vmd  molecule.vmd
aimsprop/xray/: README  diffraction.py  formfactor.py  legendre.py  old-diffraction.py
code_reference/blur.py/: index.html
code_reference/bootstrap.py/: index.html
code_reference/fms90.py/: index.html
code_reference/geom.py/: index.html
code_reference/pes.py/: index.html
code_reference/plot.py/: index.html
code_reference/pop.py/: index.html
code_reference/rotate.py/: index.html
code_reference/sine.py/: index.html
code_reference/traj.py/: index.html
code_reference/ued.py/: index.html
code_reference/wrap.py/: index.html
code_reference/xyz.py/: index.html
docs/: CHANGELOG.md  CONTRIBUTING.md  index.md  some_feature.md  tutorial.md
docs/code_reference/: blur.py.md  bootstrap.py.md  fms90.py.md  geom.py.md  pes.py.md  plot.py.md  pop.py.md  rotate.py.md  sine.py.md  traj.py.md  ued.py.md  wrap.py.md  xyz.py.md
docs/scripts/: colton_script.md  convert_geomdat.md  spectra.md
docs/user_scripts/: colton_script.md
examples/bootstrap-1/: example.py
examples/pes-1/: README  example.py  get_dyson.py  get_molpro.py  prep_dyson.py  prep_molpro.py
examples/pop-1/: example.py
examples/stilbene-1/: example.py
examples/stilbene-2/: example.py
examples/ued-1/: test.py
examples/ued-1/movie/: movie.sh
examples/vis-aims-1/: example.py
examples/xray-1/: example.py
notes/: README
notes/ued/: report.aux  report.tex
notes/ued/code/rgroup/: test.py
notes/ued/code/so3/: test.py
notes/weights/: report.tex
notes/xray/: report.aux  report.tex
prop/: README  fms90.py  geom.py  plot.py  traj.py  ued.py
scripts/: convert_to_geomdat.py  format.sh  need_for_speed_3.py  spectra.py
scripts/colton_script/: index.html
scripts/convert_geomdat/: index.html
scripts/spectra/: index.html
search/: search_index.json
some_feature/: index.html
tests/: conftest.py  test_geom_operations.py  test_pop_operations.py  test_rotate.py  test_scripts.py  test_traj_operations.py  test_ued_operations.py
tests/test_data/: README
tests/test_data/0002/: Amp.1  Amp.2  Amp.3  FMS.out  TrajDump.1  TrajDump.2  TrajDump.3  positions.1.xyz  positions.2.xyz  positions.3.xyz
tests/test_data/0003/: Amp.1  Amp.2  FMS.out  TrajDump.1  TrajDump.2  positions.1.xyz  positions.2.xyz
tests/test_data/scripts/: coors_3.rst7
tutorial/: index.html
user_scripts/colton_script/: index.html
util/: README
util/spectra/: spectra.py
