[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.flit.metadata]
author = "Rob Parrish"
author-email = "mtzgroupadmin@gmail.com"
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "License :: OSI Approved :: MIT License",
]
description-file = "README.md"
home-page = "https://github.com/mtzgroup/aimsprop"
module = "aimsprop"

requires = [
  "numpy",
  "matplotlib",
]

requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = [
  "pytest >=6.2.2",
  "pytest-cov >=2.10.1,<3.0.0",
  "coverage >=5.3.1,<6.0",
]

dev = [
  "black>=20.8b1",
  "flake8 >=3.8.4",
  "isort >= 5.7.0",
]

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.coverage.run]
branch = true
omit = [
  "*/tests/*",
  "*site-packages*",
  "*__init__.py",
]
