[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.flit.metadata]
author = "Rob Parrish"
author-email = "mtzgroupadmin@gmail.com"
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "License :: OSI Approved :: MIT License",
]
description-file = "README.md"
home-page = "https://mtzgroup.github.io/aimsprop/"
module = "aimsprop"

requires = [
  "numpy",
  "matplotlib",
]

requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://mtzgroup.github.io/aimsprop/"

[tool.flit.metadata.requires-extra]
test = [
  "pytest >=6.2.2",
  "pytest-cov >=2.10.1,<3.0.0",
  "coverage >=5.3.1,<6.0",
]

dev = [
  "black>=20.8b1",
  "flake8 >=3.8.4",
  "isort >= 5.7.0",
  "pre-commit >= 2.11.1",
  "autoflake >= 1.4"
]

doc = [
  "mkdocs == 1.1.2",
  "mkdocs-material == 7.0.3",
  "mkdocstrings == 0.15.0",
]

[tool.pytest.ini_options]
# addopts = "-p no:warnings --cov-report html:htmlcov --cov"
testpaths = "tests/"

[tool.black]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
  )/
  | lebedev.py       # also separately exclude the lebedev.py file
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.coverage.run]
branch = true
omit = [
  "*/tests/*",
  "*site-packages*",
  "*__init__.py",
]
